# FM-digiLab-2025

./: .gitignore  README.md  pyproject.toml  test.ipynb
fm_processor/: __init__.py  utils.py
fm_processor/classification/: __init__.py  base.py  classifier.py  gp.py  svc.py
fm_processor/inference/: __init__.py  inference.py  loading.py  visualisation.py
fm_processor/preprocess/: denoise.py  preprocess.py
notebooks/: AD_decompose.ipynb  resample.ipynb  test.ipynb  visualisations.ipynb
scripts/: fit.py  inference.py  preprocess.py
