[project]
name = "fm_processor"
version = "0.1.0"
description = ""
authors = [
    {name = "huylenguyen",email = "huy@digilab.co.uk"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pywavelets (>=1.8.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
