[tool.poetry]
name = "fm-processor"
version = "0.1.0"
description = ""
authors = ["huylenguyen <huy@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.2.2"
pandas = "^2.2.3"
scipy = "^1.15.1"
scikit-learn = "^1.6.1"
pywavelets = "^1.8.0"
matplotlib = "^3.10.0"
dill = "^0.3.9"
plotly = "5.24.1"
anywidget = "^0.9.15"
jupyterlab-widgets = "^3.0.13"
jupyterlab = "^4.3.5"
gpytorch = "^1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
